--- a/.gitignore
+++ b/.gitignore
@@ -169,6 +169,7 @@ TSWLatexianTemp*
 # WinEdt
 *.bak
 *.sav
+*.swp
 
 # Texpad
 .texpadtmp
@@ -178,3 +179,4 @@ TSWLatexianTemp*
 
 # KBibTeX
 *~[0-9]*
+
