make both present and handout version pdfs
* Adapted makefile to create multiple PDFs
* Added Slides showing the differences in handout mode
* Renaming slides showing exemplary beamer behaviour to make it clear
what they show
* split main.tex in two main_* files, more are possible and require
little change
* both will be compiled to a main_*.pdf, with their respective content
* 'make' now defaults to creating 'handout' mode only
* 'make all' also creates the 'main_present.pdf'
* made so that `cp` (and thus make) does not throw an error when source
file (e.g.  main_present.pdf) does not exist

--- a/template_tex/Makefile
+++ b/template_tex/Makefile
@@ -1,26 +1,39 @@
 # Latex Makefile using latexmk
 # Modified by Dogukan Cagatay <dcagatay@gmail.com>
 # Modified by Philipp Jund
-# Originally from : http://tex.stackexchange.com/a/40759
+# Modified by Felix Karg <fkarg10@gmail.com>
+# Adapted from : http://tex.stackexchange.com/a/40759
+# Additional Source:
+# https://serverfault.com/questions/153875/how-to-let-cp-command-dont-fire-an-error-when-source-file-does-not-exist
 
 
-PROJNAME=main
+PROJNAME=main_handout main_present
+PDFNAMES=$(foreach PDF, $(PROJNAME),$(PDF).pdf)
 OUT_DIR=out
-.PHONY: $(PROJNAME).pdf all clean
 
-all: dir pdfpc $(PROJNAME).pdf
+.PHONY: $(PDFNAMES) all clean
+
+fast: dir pdfpc main_handout.pdf copy
+
+all: dir pdfpc $(PDFNAMES) copy
 
 dir:
-	mkdir -p $(OUT_DIR)
 	mkdir -p $(OUT_DIR)/chapters
 
 pdfpc:
 	cp ../template/pdfpcnotes.sty out/pdfpcnotes.sty
 
-$(PROJNAME).pdf: $(PROJNAME).tex
+
+$(PDFNAMES): %.pdf: %.tex
 	latexmk -outdir=$(OUT_DIR) -pdf -use-make -file-line-error -shell-escape $<
-	cp $(OUT_DIR)/$(PROJNAME).pdf $(PROJNAME).pdf
-	cp $(OUT_DIR)/$(PROJNAME).pdfpc $(PROJNAME).pdfpc
+
+
+# '.' prevents of having to specify the complete filename (as we may be copying multiple files)
+# '||' is similar to a pipe, but only run if an error happened
+# ':' is a posix-'true', preventing it from failing if a file was missing (allowing 'make fast')
+copy:
+	cp -uv $(foreach PDF, $(PDFNAMES),$(OUT_DIR)/$(PDF)) . || :
+	cp -uv $(foreach PDFPC, $(PROJNAME),$(OUT_DIR)/$(PDFPC).pdfpc) . || :
 
 clean:
 	rm -rf $(OUT_DIR)
